--- a/app/server/rkmapp-server-manager/rkmapp-server-manager.component.html
+++ b/app/server/rkmapp-server-manager/rkmapp-server-manager.component.html
@@ -10,6 +10,6 @@
       </ul>
 
     </div>
-
       <rkmapp-server-manager-home></rkmapp-server-manager-home>
+    <router-outlet></router-outlet>
 
